tests/src/frontend/typechecking/invalid/bad_default_value_class.sk
mutable base class P {
  children =
  | L()
  | R()
}

class No1{x: L = R()}
mutable base class No2{x: mutable L = L()}
